# eigen3

./: .gitignore  AGENT_AND_WORKFLOW_COMPLETED.md  CHANGELOG.md  CONVERSION_PLAN.md  EIGEN2_DELTA.md  ENVIRONMENT_COMPLETED.md  Makefile  NETWORKS_COMPLETED.md  PHASE1_COMPLETE.md  PROJECT_SETUP.md  QUICK_START.md  README.md  main.py  nextsteps.md  process_eigen_data.py  pyproject.toml  requirements-data.txt  requirements-dev.txt  requirements-train.txt  requirements.txt  setup.py
configs/: config.yaml
configs/agent/: trading_erl.yaml
configs/env/: trading.yaml  trading_mono.yaml
configs/logging/: default.yaml
configs/population/: default.yaml  offpolicy_vram_headroom.yaml
docs/: eigen2_compat_contract.md
eigen3/: __init__.py  config.py
eigen3/agents/: __init__.py  trading_agent.py
eigen3/data/: __init__.py  data_loader.py  mono_loader.py  splits.py
eigen3/entrypoints/: __init__.py  training.py
eigen3/environment/: __init__.py  trading_env.py
eigen3/erl/: __init__.py  cloud_sync.py  global_fifteen.py  hall_of_fame.py
eigen3/models/: __init__.py  actor.py  attention.py  critic.py  feature_extractor.py
eigen3/utils/: __init__.py  gpu_memory.py  progress.py  run_naming.py  terminal_banner.py  training_checkpoint.py
eigen3/workflows/: __init__.py  trading_workflow.py
evorl/: README.md  pyproject.toml
evorl/configs/: config.yaml  logging.yaml
evorl/configs/agent/: ddqn.yaml  dqn.yaml
evorl/evorl/algorithms/: dqn.py
evorl/evorl/envs/: __init__.py
evorl/evorl/evaluators/: __init__.py
evorl/scripts/: train_dist.py
scripts/: evaluate.py  train.py
tests/: __init__.py
tests/unit/: test_actor.py  test_attention.py  test_chunked_vmap_loss.py  test_cloud_sync.py  test_critic.py  test_data_loader.py  test_example.py  test_feature_extractor.py  test_global_fifteen.py  test_gpu_memory.py  test_hall_of_fame_purge.py  test_mono_loader.py  test_run_naming.py  test_splits.py  test_trading_agent.py  test_trading_env.py  test_trading_workflow.py  test_training_checkpoint.py  test_workflow_config_mapping.py
